--- a/assets/datahub/estimate.html
+++ b/assets/datahub/estimate.html
@@ -5,197 +5,225 @@
   <title>Estimate Form | Raj Marketing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     :root {
-      --primary: #191970;
-      --secondary: #1fc8db;
-      --accent: #f9d423;
+      --primary: #1a237e;
+      --primary-dark: #0d1333;
+      --secondary: #00bcd4;
+      --secondary-light: #b2ebf2;
+      --accent: #ffd740;
       --white: #fff;
-      --gray: #f6f8fa;
-      --shadow: 0 4px 24px rgba(25,25,112,0.08);
-      --border-radius: 16px;
-      --spacing: 1.25em;
+      --gray: #f4f6fa;
+      --border-radius: 20px;
+      --shadow: 0 6px 24px rgba(26,35,126,0.13);
+      --input-bg: #f7faff;
+      --input-focus: #00bcd4;
+      --spacing: 1.35em;
     }
     html, body {
       margin: 0;
       padding: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(120deg, #fdfcfb 0%, #e2d1c3 100%);
-      color: #23213d;
+      font-family: 'Poppins', 'sans-serif';
+      background: linear-gradient(115deg, #e3f2fd 0%, #ece9f7 100%);
+      color: var(--primary-dark);
       min-height: 100vh;
     }
     .estimate-container {
-      max-width: 650px;
-      margin: 2em auto;
+      max-width: 720px;
+      margin: 2.5em auto;
       background: var(--white);
       border-radius: var(--border-radius);
       box-shadow: var(--shadow);
       overflow: hidden;
       padding: 0;
-      transition: box-shadow .2s;
+      transition: box-shadow .25s;
     }
     .estimate-header {
-      background: linear-gradient(90deg, var(--primary) 60%, var(--secondary) 100%);
+      background: linear-gradient(110deg, var(--primary) 70%, var(--secondary) 100%);
       color: var(--white);
-      padding: 2em 1.4em 1.3em 1.4em;
+      padding: 2.3em 2em 1.5em 2em;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       position: relative;
     }
     .estimate-logo {
-      width: 64px;
-      height: 64px;
+      width: 70px;
+      height: 70px;
       object-fit: contain;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px #0002;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px #0001;
       background: #fff;
-      margin-bottom: 1em;
+      margin-bottom: 1.1em;
+      border: 3px solid var(--accent);
     }
     .estimate-title {
-      font-size: 2em;
+      font-size: 2.4em;
       font-weight: 700;
-      letter-spacing: 0.02em;
-      margin-bottom: 0.15em;
-      text-shadow: 0 1px 6px #0002;
+      letter-spacing: 0.01em;
+      margin-bottom: 0.25em;
+      font-family: 'Poppins', sans-serif;
+      text-shadow: 0 3px 16px #0002;
     }
     .estimate-id-date {
-      font-size: 1em;
+      font-size: 1.12em;
       color: var(--accent);
       font-weight: 600;
-      margin-bottom: 0.3em;
+      margin-bottom: 0.15em;
       letter-spacing: 0.03em;
+      font-family: 'Poppins', sans-serif;
     }
     form {
-      padding: 2em 1.4em 1.2em 1.4em;
+      padding: 2.2em 2em 1.7em 2em;
     }
     .form-row {
       display: flex;
       flex-wrap: wrap;
-      gap: .2em;
-      margin-bottom: 1.1em;
+      gap: 2em;
+      margin-bottom: 1.6em;
     }
     .form-group {
-      flex: 1 1 180px;
-      min-width: 150px;
+      flex: 1 1 220px;
+      min-width: 170px;
       margin-bottom: 0.4em;
       display: flex;
       flex-direction: column;
+      position: relative;
     }
     .form-group label {
       font-weight: 600;
-      margin-bottom: 0.23em;
+      margin-bottom: 0.38em;
       color: var(--primary);
-      font-size: 1em;
+      font-size: 1.18em;
       letter-spacing: 0.01em;
+      font-family: 'Poppins', sans-serif;
     }
     .form-group input,
     .form-group select,
     .form-group textarea {
-      padding: 0.5em 0.8em;
-      border-radius: 7px;
-      border: 1.4px solid #c3d6ef;
-      font-size: 1em;
-      background: #f5fafc;
-      color: #1b2e4b;
+      padding: 0.77em 1.1em;
+      border-radius: 10px;
+      border: 1.5px solid #b2ebf2;
+      font-size: 1.09em;
+      background: var(--input-bg);
+      color: var(--primary-dark);
       outline: none;
-      transition: border .17s;
-      font-family: inherit;
+      transition: border .16s, box-shadow .13s;
+      font-family: 'Poppins', sans-serif;
+      box-shadow: 0 2px 8px #00bcd410;
       resize: none;
     }
     .form-group input:focus,
     .form-group select:focus,
     .form-group textarea:focus {
-      border: 1.6px solid var(--secondary);
+      border: 1.7px solid var(--input-focus);
+      box-shadow: 0 3px 14px #00bcd422;
+    }
+    .form-group input[readonly] {
+      background: #e0f7fa;
+      color: #7e8ba3;
+      font-weight: 500;
+      border-style: dashed;
+    }
+    .form-group input[type="date"]::-webkit-input-placeholder {
+      color: #b2bec3;
+    }
+    .form-group textarea {
+      min-height: 44px;
+      max-height: 130px;
     }
     .estimate-table-section {
-      margin-bottom: 1.2em;
+      margin-bottom: 1.7em;
       overflow-x: auto;
     }
     .estimate-table {
       width: 100%;
       border-collapse: collapse;
-      font-size: 1em;
-      margin-bottom: 0.6em;
+      font-size: 1.04em;
+      margin-bottom: 0.7em;
       background: var(--gray);
-      border-radius: 9px;
+      border-radius: 11px;
       overflow: hidden;
-      min-width: 650px;
-      box-shadow: 0 1px 8px #0001;
+      min-width: 620px;
+      box-shadow: 0 1px 10px #00bcd408;
     }
     .estimate-table th, .estimate-table td {
       border: 1px solid #e0eafc;
-      padding: 0.5em 0.4em;
+      padding: 0.6em 0.5em;
       text-align: center;
+      font-family: 'Poppins', sans-serif;
     }
     .estimate-table th {
-      background: linear-gradient(90deg,#1fc8db .8%,#191970 90%);
+      background: linear-gradient(90deg,var(--secondary) 3%, var(--primary) 100%);
       color: #fff;
       font-weight: 700;
-      font-size: 1.01em;
+      font-size: 1.07em;
       letter-spacing: 0.01em;
     }
     .estimate-table td input,
     .estimate-table td select {
       width: 100%;
-      padding: 0.3em 0.5em;
-      font-size: 1em;
-      border-radius: 5px;
-      border: 1px solid #d7eafd;
+      padding: 0.37em 0.6em;
+      font-size: 1.04em;
+      border-radius: 7px;
+      border: 1px solid #b2ebf2;
       background: #fff;
-      color: #14345b;
+      color: var(--primary-dark);
       text-align: center;
+      font-family: 'Poppins', sans-serif;
     }
     .add-row-btn {
       margin: 0.6em 0;
       background: var(--secondary);
       color: #fff;
       border: none;
-      padding: 0.45em 1.2em;
-      border-radius: 7px;
-      font-size: 1em;
+      padding: 0.52em 1.32em;
+      border-radius: 9px;
+      font-size: 1.04em;
       cursor: pointer;
       font-weight: 600;
       transition: background .18s;
-      box-shadow: 0 2px 8px #0002;
+      box-shadow: 0 2px 10px #00bcd418;
       display: flex;
       align-items: center;
       gap: 0.4em;
+      font-family: 'Poppins', sans-serif;
     }
+    .add-row-btn:hover { background: #0097a7; }
     .add-row-btn .material-icons {
-      font-size: 1.3em;
+      font-size: 1.32em;
       vertical-align: middle;
     }
-    .add-row-btn:hover { background: #109cb9; }
     .calc-btn {
-      margin-top: 1em;
+      margin-top: 1.25em;
       background: var(--accent);
       color: var(--primary);
       border: none;
-      padding: 0.65em 2em;
-      border-radius: 8px;
-      font-size: 1.13em;
+      padding: 0.78em 2em;
+      border-radius: 10px;
+      font-size: 1.22em;
       cursor: pointer;
       font-weight: 700;
       transition: background .18s;
-      box-shadow: 0 2px 15px #ffd60033;
+      box-shadow: 0 2px 16px #ffd60033;
       display: block;
       margin-left: auto;
       margin-right: 0;
+      font-family: 'Poppins', sans-serif;
     }
-    .calc-btn:hover { background: #fcbb03; }
+    .calc-btn:hover { background: #ffb300; }
     .totals-box {
-      margin-top: 1.3em;
-      padding: 1.1em 1em 1em 1em;
-      background: linear-gradient(90deg, #e7f2ff 60%, #e2d1c3 100%);
-      border-radius: 9px;
-      box-shadow: 0 2px 8px #0001;
-      font-size: 1.08em;
-      color: #19344c;
-      max-width: 420px;
+      margin-top: 1.45em;
+      padding: 1.3em 1.2em 1.1em 1.2em;
+      background: linear-gradient(90deg, #e1f5fe 60%, #fffde7 100%);
+      border-radius: 11px;
+      box-shadow: 0 2px 12px #00bcd410;
+      font-size: 1.13em;
+      color: var(--primary-dark);
+      max-width: 470px;
       margin-left: auto;
       margin-right: 0;
+      font-family: 'Poppins', sans-serif;
     }
     .totals-box label {
       font-weight: 600;
@@ -205,93 +233,95 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 0.45em;
+      margin-bottom: 0.52em;
+      font-family: 'Poppins', sans-serif;
     }
     .totals-row input[type="number"] {
-      width: 70px;
+      width: 80px;
       margin-left: 8px;
-      font-size: 1em;
+      font-size: 1.04em;
+      font-family: 'Poppins', sans-serif;
     }
     .data-preview {
-      margin: 2em 0 0 0;
-      background: #fafbf9;
-      border-radius: 12px;
-      padding: 1.85em 1.1em 1.2em 1.1em;
-      box-shadow: 0 2px 18px #0001;
-      font-size: 1.03em;
-      /* limit width for mobile pdf rendering */
-      max-width: 600px;
+      margin: 2.1em 0 0 0;
+      background: #fdfcff;
+      border-radius: 15px;
+      padding: 2em 1.2em 1.4em 1.2em;
+      box-shadow: 0 2px 19px #00bcd410;
+      font-size: 1.09em;
+      max-width: 660px;
       margin-left: auto;
       margin-right: auto;
+      font-family: 'Poppins', sans-serif;
     }
     .pdf-btn {
       display: inline-block;
-      margin-top: 1.3em;
+      margin-top: 1.5em;
       background: var(--primary);
       color: #fff;
       border: none;
-      padding: 0.7em 2.1em;
-      border-radius: 10px;
-      font-size: 1.07em;
+      padding: 0.82em 2.3em;
+      border-radius: 12px;
+      font-size: 1.18em;
       cursor: pointer;
       font-weight: 700;
-      box-shadow: 0 2px 12px #0e2a4722;
+      box-shadow: 0 2px 13px #1a237e22;
       transition: background .18s;
       margin-left: auto;
       margin-right: 0;
+      font-family: 'Poppins', sans-serif;
     }
     .pdf-btn:hover { background: var(--secondary);}
-    .table-scroll { overflow-x: auto; }
     .remove-row-btn {
-      background: #ef4444;
+      background: #ef5350;
       color: #fff;
       border: none;
-      padding: 0.28em 0.62em;
-      border-radius: 5px;
+      padding: 0.35em 0.7em;
+      border-radius: 7px;
       cursor: pointer;
-      font-size: 1.2em;
+      font-size: 1.18em;
       display: inline-flex;
       align-items: center;
       transition: background .16s;
+      font-family: 'Poppins', sans-serif;
     }
-    .remove-row-btn:hover { background: #bc1c1c; }
+    .remove-row-btn:hover { background: #b71c1c; }
 
-    /* Responsive styles overhaul */
+    /* Responsive styles */
     @media (max-width: 900px) {
       .estimate-container { max-width: 99vw; }
       .data-preview { max-width: 99vw; }
     }
     @media (max-width: 700px) {
       .estimate-container { max-width: 100vw; border-radius: 0; box-shadow: none;}
-      .estimate-header { padding: 1.2em 0.8em 1em 0.8em; }
-      form { padding: 1.3em 0.8em 0.9em 0.8em; }
-      .data-preview { padding: 1em 0.3em; }
-      .totals-box { padding: 0.7em 0.3em; }
+      .estimate-header { padding: 1.1em 0.8em 1em 0.8em; }
+      form { padding: 1.15em 0.8em 0.95em 0.8em; }
+      .data-preview { padding: 0.95em 0.2em; }
+      .totals-box { padding: 0.77em 0.3em; }
       .estimate-table-section { margin-bottom: 1em; }
-      .estimate-table { min-width: 540px; font-size: 0.92em; }
-      .estimate-title { font-size: 1.25em; }
+      .estimate-table { min-width: 430px; font-size: 0.95em; }
+      .estimate-title { font-size: 1.45em; }
     }
     @media (max-width: 520px) {
       .form-row { flex-direction: column; gap: 0.7em;}
       .form-group {min-width: 100px;}
-      .estimate-title { font-size: 1.1em;}
-      .estimate-id-date { font-size: 0.92em;}
-      .pdf-btn, .calc-btn { width: 100%; font-size: 1em;}
-      .estimate-header,form {padding-left:0.4em;padding-right:0.4em;}
-      .estimate-table { min-width: 400px; font-size: 0.85em;}
-      .data-preview {padding:0.7em 0.18em;font-size:0.98em;}
+      .estimate-title { font-size: 1.12em;}
+      .estimate-id-date { font-size: 0.97em;}
+      .pdf-btn, .calc-btn { width: 100%; font-size: 1.03em;}
+      .estimate-header,form {padding-left:0.35em;padding-right:0.35em;}
+      .estimate-table { min-width: 320px; font-size: 0.84em;}
+      .data-preview {padding:0.6em 0.14em;font-size:0.99em;}
     }
     @media (max-width: 400px) {
-      .estimate-title { font-size: 0.95em;}
-      .estimate-id-date { font-size: 0.85em;}
-      .estimate-table { min-width: 300px;}
-      .data-preview {font-size:0.93em;}
+      .estimate-title { font-size: 0.93em;}
+      .estimate-id-date { font-size: 0.81em;}
+      .estimate-table { min-width: 220px;}
+      .data-preview {font-size:0.95em;}
     }
-
     /* Table scroll for touch devices */
     .estimate-table-section { position: relative;}
     .estimate-table-section::-webkit-scrollbar { height: 6px; }
-    .estimate-table-section::-webkit-scrollbar-thumb { background: #ddd; border-radius: 6px;}
+    .estimate-table-section::-webkit-scrollbar-thumb { background: #b2ebf2; border-radius: 6px;}
     /* Hide number arrows for inputs on mobile */
     input[type=number]::-webkit-inner-spin-button,
     input[type=number]::-webkit-outer-spin-button {
@@ -302,6 +332,7 @@
       -moz-appearance: textfield;
     }
   </style>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="estimate-container">
@@ -349,9 +380,7 @@
               <th>Remove</th>
             </tr>
           </thead>
-          <tbody id="tableBody">
-            <!-- JS Rows -->
-          </tbody>
+          <tbody id="tableBody"></tbody>
         </table>
         <button type="button" class="add-row-btn" onclick="addRow()"><span class="material-icons">add_circle_outline</span>Add Row</button>
       </div>
@@ -471,8 +500,8 @@
       let valid = true;
       ['cName','cPhone','cAddress','estDate'].forEach(id=>{
         const el = document.getElementById(id);
-        if(!el.value) { el.style.border='1.5px solid red'; valid=false; }
-        else { el.style.border='1px solid #c8e3fa'; }
+        if(!el.value) { el.style.border='1.7px solid #ef5350'; valid=false; }
+        else { el.style.border='1.5px solid #b2ebf2'; }
       });
       if(!valid) { alert('Fill all required fields!'); return; }
       // Collect table data
@@ -521,19 +550,19 @@
         <div style="display:flex;align-items:center;gap:1.1em;flex-wrap:wrap;margin-bottom:0.7em;">
           <img src="https://raw.githubusercontent.com/Player456B/rajmarketing/main/assets/images/logo.svg" style="width:54px;height:54px;object-fit:contain;border-radius:9px;box-shadow:0 2px 9px #0002;flex-shrink:0;">
           <div>
-            <span style="font-size:1.12em;font-weight:700;color:#191970;letter-spacing:0.01em;">Estimate Preview</span><br>
-            <span style="font-size:0.92em;color:#1fc8db;font-weight:600">${document.getElementById('estId').textContent}</span>
+            <span style="font-size:1.16em;font-weight:700;color:#1a237e;letter-spacing:0.01em;font-family:'Poppins',sans-serif;">Estimate Preview</span><br>
+            <span style="font-size:0.98em;color:#00bcd4;font-weight:600;font-family:'Poppins',sans-serif;">${document.getElementById('estId').textContent}</span>
           </div>
         </div>
-        <div style="margin:0.8em 0 0.5em 0;line-height:1.5;font-size:0.99em;">
-          <b>Customer Name:</b> ${document.getElementById('cName').value}<br>
+        <div style="margin:0.8em 0 0.5em 0;line-height:1.6;font-size:1.07em;font-family:'Poppins',sans-serif;">
+  <b>Customer Name:</b> ${document.getElementById('cName').value}<br>
           <b>Phone:</b> ${document.getElementById('cPhone').value}<br>
           <b>Address:</b> ${document.getElementById('cAddress').value}<br>
           <b>Date:</b> ${document.getElementById('estDate').value}<br>
         </div>
         <div style="overflow-x:auto;">
-        <table border="1" cellpadding="5" style="margin:0.7em 0;width:100%;border-collapse:collapse;background:#fff;font-size:0.97em;min-width:320px;">
-          <tr style="background:linear-gradient(90deg,#1fc8db .8%,#191970 90%);color:#fff;">
+        <table border="1" cellpadding="5" style="margin:0.7em 0;width:100%;border-collapse:collapse;background:#fff;font-size:1.02em;min-width:320px;font-family:'Poppins',sans-serif;">
+          <tr style="background:linear-gradient(90deg,#00bcd4 3%,#1a237e 100%);color:#fff;">
             <th>Sl.No.</th>
             <th>Type</th>
             <th>W</th>
@@ -557,16 +586,16 @@
           `).join('')}
         </table>
         </div>
-        <div style="margin-top:0.5em;max-width:330px;font-size:0.98em;">
+        <div style="margin-top:0.5em;max-width:330px;font-size:1.05em;font-family:'Poppins',sans-serif;">
           <div><b>Total Qty:</b> ${totalQty}</div>
           <div><b>Total Sqft:</b> ${totalSqft.toFixed(2)}</div>
           <div><b>Total Price:</b> ₹${totalPrice.toFixed(2)}</div>
           <div><b>Discount:</b> ${discount}% (₹${(totalPrice*discount/100).toFixed(2)})</div>
           <div><b>Sub Total:</b> ₹${afterDiscount.toFixed(2)}</div>
           <div><b>GST(18%):</b> ₹${gst.toFixed(2)}</div>
-          <div style="font-size:1.05em;color:#1fc8db;font-weight:700;"><b>Final Price (Incl. GST):</b> ₹${finalPrice.toFixed(2)}</div>
+          <div style="font-size:1.09em;color:#00bcd4;font-weight:700;"><b>Final Price (Incl. GST):</b> ₹${finalPrice.toFixed(2)}</div>
         </div>
-        <div style="margin-top:1.2em;font-size:0.93em;color:#888;">Thank you for choosing <b>Raj Marketing</b>!</div>
+        <div style="margin-top:1.2em;font-size:0.97em;color:#888;font-family:'Poppins',sans-serif;">Thank you for choosing <b>Raj Marketing</b>!</div>
       `;
       document.getElementById('previewBox').innerHTML = preview;
       document.getElementById('previewBox').style.display = '';
